[tool.poetry]
name = "hackathon"
version = "0.1.0"
description = ""
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
tensorflow = "^2.12"
scikit-learn = "^1.3"
pandas = "^2.0"
bokeh = "^3.0"
h5py = "^3.9"
jupyter = "^1.0"
tqdm = "^4.65"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
